# mcp-homelab-server

./: INSTALL.md  README.md  pyproject.toml
src/: server.py
