[project]
name = "mcp-homelab-server"
version = "0.1.0"
description = "Model Context Protocol server for homelab management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
